Fixes #320. A new option in the gadget menu appears to toggle the gadget background transparency. If the gadget has set a concrete background, this background will be visible instead of the transparent one.
--HG--
extra : convert_revision : svn%3A2a98c5bb-d66c-48ca-a96c-db028a6c31f4/ezweb_platform/src/trunk%401582

--- a/media/css/dragboard.css
+++ b/media/css/dragboard.css
@@ -15,6 +15,9 @@ div.gadget_window {
 div.gadget_window_locked {
   position: absolute;
   border: none;
+}
+
+div.gadget_window_transparent {
   background: transparent;
 }
 
@@ -95,6 +98,10 @@ div.gadget_window div.gadget_menu input[type="button"].errorbutton {
 div.gadget_window div.gadget_wrapper {
   width: 100%;
   border-top: 1px solid #4c5054;
+}
+
+div.gadget_window_locked div.gadget_wrapper {
+  border: none;
 }
 
 div.gadget_window div.gadget_wrapper object {
